--- a/sinhnhat.html
+++ b/sinhnhat.html
@@ -258,7 +258,7 @@ background-image : url(https://i.imgur.com/rWuI1Zw.jpg);
         <div class="plane twelve"></div>
       </div>
 <div class="typewrite"><b style="color:#ff0000">
-Cách đây 18 năm về trước, một cô bé đã khóc thật nhiều để chào đón mình ra đời. Và ngày hôm nay cô bé ấy chính là Hoàng Tố Uyên,<br />Cậu hãy mỉm cười thật nhiều nhé!<br /> để thấy rằng từng giây, từng phút đều mang lại hạnh phúc cho Cậu. Và tớ muốn nói với Cậu rằng:<br> chúc Cậu sinh nhật vui vẻ!<br>Chúc Cậu ngày càng xinh gái hơn, tiền tài ào ào thăng tiến và tình yêu "tưng bừng" bùng nổ.<br>Cầu mong những gì may mắn nhất, tốt đẹp nhất và hạnh phúc nhất sẽ đến với Cậu trong tuổi mới<br>chúc Cậu Một ngày bình yên, êm ấm bên gia đình và bạn bè<br>Chúc Cậu những gì tốt đẹp nhất mà chưa từng ai chúc ấy<br>và Cậu Chúc mọi điều ước trong ngày sinh nhật của Cậu đều trở thành hiện thực,<br> hãy thổi nến trên bánh sinh nhật để ước mơ được nhiệm màu Cậu nhé!
+Cách đây 18 năm về trước, một cô bé đã khóc thật nhiều để chào đón mình ra đời. Và ngày hôm nay cô bé ấy chính là Hoàng Tố Uyên,<br />Cậu hãy mỉm cười thật nhiều nhé!<br /> để thấy rằng từng giây, từng phút đều mang lại hạnh phúc cho Cậu. Và tớ muốn nói với Cậu rằng:<br> chúc Cậu sinh nhật vui vẻ!<br>Chúc Cậu ngày càng xinh gái hơn, tiền tài ào ào thăng tiến và tình yêu "tưng bừng" bùng nổ.<br>Cầu mong những gì may mắn nhất, tốt đẹp nhất và hạnh phúc nhất sẽ đến với Cậu trong tuổi mới<br>chúc Cậu Một ngày bình yên, êm ấm bên gia đình và bạn bè<br>Chúc Cậu những gì tốt đẹp nhất mà chưa từng ai chúc ấy<br>và tớ Chúc mọi điều ước trong ngày sinh nhật của Cậu đều trở thành hiện thực,<br> hãy thổi nến trên bánh sinh nhật để ước mơ được nhiệm màu Cậu nhé!
 </b></td></tr></table></td></tr>	
 			</table>
 		</td></tr></table>
